Removing gemspec metadata, we want to push to rubygems in the future. Updating travis yml to include current ruby but allow failures as we are primarily testing with jruby. Updating version so we don't make an accidental generally available release

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: ruby
 rvm:
+  - ruby
   - jruby
   - jruby-9.0.0.0-pre1
 env:
@@ -14,4 +15,5 @@ script: bundle exec rake
 
 matrix:
   allow_failures:
+      rvm: ruby
       rvm: jruby-9.0.0.0-pre1
